--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^5.21.7"
+    "sequelize": "^6.12.0-beta.3"
   }
 }
